--- a/dashboard.html
+++ b/dashboard.html
@@ -173,7 +173,7 @@
             <h2>Masukkan Token</h2>
             <p>Diisi sama persis ya mas</p>
             <input type="text" id="token-input" placeholder="BDNUUA ini tokennya ya sayang" maxlength="6">
-            <button id="verify-token-btn">Verifikasi Token</button>
+            <button id="verify-token-btn">Mulai Ujian</button>
             <button id="whatsapp-btn" style="margin-top: 10px; background-color: #25D366; color: white; border: none; border-radius: 5px; padding: 10px; cursor: pointer;" onclick="window.open('https://api.whatsapp.com/send/?phone=6289530067456&text=Selamat+Pagi/siang/malam+min%2C+Mau+tanya+token+%3A&type=phone_number&app_absent=0', '_blank')">Tanya Token ke Admin</button>
         </div>
     </div>
