--- a/question.html
+++ b/question.html
@@ -46,6 +46,7 @@
             <ul></ul>
             <button id="close-list">Tutup</button>
         </div>
+        <audio id="alert-sound" src="videoplayback (4).mp3" preload="auto"></audio>
 
         <!-- Tombol untuk memperbesar dan memperkecil teks -->
 
