--- a/dashboard.html
+++ b/dashboard.html
@@ -131,24 +131,24 @@
         <div class="mapel-container">
             <!-- Mata Pelajaran 1 -->
             <div class="exam-info">
-                <p>Mapel: <strong>INFOMATIKA</strong></p>
+                <p>Mapel: <strong>BAHASA INGGRIS</strong></p>
                 <p>Waktu: <strong>25 MENIT</strong></p>
-                <p>Jumlah Soal: <strong>40</strong></p>
+                <p>Jumlah Soal: <strong>30</strong></p>
                 <p>Status Soal: <strong>Active</strong></p>
                 <p>Expired: <strong>-</strong></p>
-                <p>Guru: <strong>ADMIN YHNS</strong></p>
+                <p>Guru: <strong>Admin4</strong></p>
                 <div class="spinner"></div>
                 <button id="start-exam">Mulai Ujian</button>
             </div>
             
             <!-- Mata Pelajaran Lain (Contoh: Pengetahuan Umum) -->
             <div class="exam-info">
-                <p>Mapel: <strong>MATEMATIKA</strong></p>
-                <p>Waktu: <strong>-</strong></p>
-                <p>Jumlah Soal: <strong>-</strong></p>
-                <p>Status Soal: <strong>NO DATA</strong></p>
+                <p>Mapel: <strong>SENI BUDAYA</strong></p>
+                <p>Waktu: <strong>25 MENIT</strong></p>
+                <p>Jumlah Soal: <strong>40</strong></p>
+                <p>Status Soal: <strong>Active</strong></p>
                 <p>Expired: <strong>-</strong></p>
-                <p>Guru: <strong>Admin Yhns</strong></p>
+                <p>Guru: <strong>Admin1</strong></p>
                 <div class="spinner"></div>
                 <button id="start-exam1">Mulai Ujian</button>
             </div>
