--- a/dashboard.html
+++ b/dashboard.html
@@ -172,7 +172,7 @@
             <span class="close">&times;</span>
             <h2>Masukkan Token</h2>
             <p>Diisi sama persis ya mas</p>
-            <input type="text" id="token-input" placeholder="BDNUUA ini tokennya ya sayang" maxlength="6">
+            <input type="text" id="token-input" placeholder="TYSNBD ini tokennya ya sayang" maxlength="6">
             <button id="verify-token-btn">Mulai Ujian</button>
             <button id="whatsapp-btn" style="margin-top: 10px; background-color: #25D366; color: white; border: none; border-radius: 5px; padding: 10px; cursor: pointer;" onclick="window.open('https://api.whatsapp.com/send/?phone=6289530067456&text=Selamat+Pagi/siang/malam+min%2C+Mau+tanya+token+%3A&type=phone_number&app_absent=0', '_blank')">Tanya Token ke Admin</button>
         </div>
@@ -363,7 +363,7 @@ footer {
             openModal(); // Buka modal untuk input token
 
             // Set token yang valid dan halaman ujian
-            const token = "BDNUUA";
+            const token = "TYSNBD";
             const examPage = 'question.html?page=1';
 
             // Verifikasi token ketika tombol Verifikasi diklik
@@ -375,7 +375,7 @@ footer {
             openModal(); // Buka modal untuk input token
 
             // Set token yang valid dan halaman ujian
-            const token = "BDNUUA";
+            const token = "TYSNBD";
             const examPage = 'question1.html?page=1';
 
             // Verifikasi token ketika tombol Verifikasi diklik
