--- a/question.html
+++ b/question.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAHASA INGGRIS KUMER (KAB.BANTUL 2025)</title>
+    <title>IPA KUMER (KAB.BANTUL 2025)</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/webp" href="d723afa8-87c7-4344-8064-11f4e3ab5480.webp">
     <link rel="stylesheet" href="css/cbt.css">
@@ -23,8 +23,8 @@
         <img id="question-image" class="question-image" src="" alt="" style="display: none;">
         <ul id="options"></ul>
         <div class="navigation">
-            <button id="back">(<)</button>
-            <button onclick="enterFullscreen()" id="next">(>)</button>
+            <button id="back">⇦</button>
+            <button onclick="enterFullscreen()" id="next">⇨</button>
             <button id="submit" style="display: none;">Kirim (lihat nilai)</button>
             <div class="text-size-controls">
                 <button id="text-size-toggle">Ukuran Teks</button>
