--- a/dashboard.html
+++ b/dashboard.html
@@ -131,24 +131,24 @@
         <div class="mapel-container">
             <!-- Mata Pelajaran 1 -->
             <div class="exam-info">
-                <p>Mapel: <strong>BAHASA INGGRIS</strong></p>
-                <p>Waktu: <strong>25 MENIT</strong></p>
+                <p>Mapel: <strong>IPA</strong></p>
+                <p>Waktu: <strong>90 MENIT</strong></p>
                 <p>Jumlah Soal: <strong>30</strong></p>
                 <p>Status Soal: <strong>Active</strong></p>
                 <p>Expired: <strong>-</strong></p>
-                <p>Guru: <strong>Admin4</strong></p>
+                <p>Guru: <strong>Admin2 (BAMBANG)</strong></p>
                 <div class="spinner"></div>
                 <button id="start-exam">Mulai Ujian</button>
             </div>
             
             <!-- Mata Pelajaran Lain (Contoh: Pengetahuan Umum) -->
             <div class="exam-info">
-                <p>Mapel: <strong>SENI BUDAYA</strong></p>
+                <p>Mapel: <strong>PJOK</strong></p>
                 <p>Waktu: <strong>25 MENIT</strong></p>
                 <p>Jumlah Soal: <strong>40</strong></p>
                 <p>Status Soal: <strong>Active</strong></p>
                 <p>Expired: <strong>-</strong></p>
-                <p>Guru: <strong>Admin1</strong></p>
+                <p>Guru: <strong>Admin2 (BAMBANG)</strong></p>
                 <div class="spinner"></div>
                 <button id="start-exam1">Mulai Ujian</button>
             </div>
@@ -172,7 +172,7 @@
             <span class="close">&times;</span>
             <h2>Masukkan Token</h2>
             <p>Diisi sama persis ya mas</p>
-            <input type="text" id="token-input" placeholder="TYSNBD ini tokennya ya sayang" maxlength="6">
+            <input type="text" id="token-input" placeholder="DDPNSC ini tokennya ya sayang" maxlength="6">
             <button id="verify-token-btn">Mulai Ujian</button>
             <button id="whatsapp-btn" style="margin-top: 10px; background-color: #25D366; color: white; border: none; border-radius: 5px; padding: 10px; cursor: pointer;" onclick="window.open('https://api.whatsapp.com/send/?phone=6289530067456&text=Selamat+Pagi/siang/malam+min%2C+Mau+tanya+token+%3A&type=phone_number&app_absent=0', '_blank')">Tanya Token ke Admin</button>
         </div>
@@ -363,7 +363,7 @@ footer {
             openModal(); // Buka modal untuk input token
 
             // Set token yang valid dan halaman ujian
-            const token = "TYSNBD";
+            const token = "DDPNSC";
             const examPage = 'question.html?page=1';
 
             // Verifikasi token ketika tombol Verifikasi diklik
@@ -375,7 +375,7 @@ footer {
             openModal(); // Buka modal untuk input token
 
             // Set token yang valid dan halaman ujian
-            const token = "TYSNBD";
+            const token = "DDPNSC";
             const examPage = 'question1.html?page=1';
 
             // Verifikasi token ketika tombol Verifikasi diklik
