--- a/question.html
+++ b/question.html
@@ -23,8 +23,8 @@
         <img id="question-image" class="question-image" src="" alt="" style="display: none;">
         <ul id="options"></ul>
         <div class="navigation">
-            <button id="back">⟸</button>
-            <button onclick="enterFullscreen()" id="next">⟹</button>
+            <button id="back">◀</button>
+            <button onclick="enterFullscreen()" id="next">▶</button>
             <button id="submit" style="display: none;">Kirim (lihat nilai)</button>
             <div class="text-size-controls">
                 <button id="text-size-toggle">Ukuran Teks</button>
